# memcached

./: .gitignore  Makefile.am  autogen.sh  configure.ac  example_protocol.c  memcached.c  memcached.h  proxy_extension.c  proxy_extension.h  proxy_extension.txt  thread.c
devtools/: clean-whitespace.pl
doc/: Makefile.am  engine-interface.xml
include/memcached/: engine.h  engine_testapp.h  extension.h  server_api.h
plugin/: Makefile.am
plugin/slab/: Makefile.am  assoc.c  assoc.h  config_parser.c  config_parser.h  items.c  items.h  slab_engine.c  slab_engine.h  slabs.c  slabs.h
server/: Makefile.am  memcached.c  memcached.h  solaris_priv.c  thread.c  util.c  util.h
tests/: Makefile.am  testapp.c
tests/t/: line-lengths.t  stats.t  whitespace.t
tests/t/lib/: MemcachedTest.pm
